Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-81921

Qbuffer::updateData result in error visual content

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P1: Critical
    • 5.15
    • 5.14.1, 5.15.0 Beta4
    • Qt3D
    • None
    • Archlinux Kde Qt5.14.1
    • Linux/X11

    Description

      action: button click
      content: dynamic update two vertexes in QBuffer
      expect: draw a line with the two vertexes added.
      result: it looks like the first vertex is dropped, and substitute by (0,0,0). only the second vertex is right.

      Attachments

        1. Screenshot_20200206_134253.png
          Screenshot_20200206_134253.png
          26 kB
        2. setData.mp4
          1.40 MB
        3. setData.zip
          4 kB
        4. testglline.tar.gz
          7 kB
        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            lemire_p Paul Lemire
            niqingliang2003 niqingliang2003
            Votes:
            1 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes