Fix QBuffer::updateData being called several times in a row

QBuffer::updateData would send a single update at the time and would
overwrite the latest update if it was called again before synching with
the backend took place.

This patches fixes by storing a list of pending updates instead.

Change-Id: I1fc501ad921c953ec88117fcc49c0cfcde6ca8aa
Task-number: QTBUG-81921
Reviewed-by: Mike Krus <mike.krus@kdab.com>