src/render/geometry/buffer.cpp
@@ -137,7 +137,7 @@ void Buffer::syncFromFrontEnd(const QNode *frontEnd, bool firstTime)
             m_manager->addDirtyBuffer(peerId());
     }
     {
-        const QVariant v = node->property("QT3D_updateData");
+        const QVariant v = node->property(QBufferPrivate::UpdateDataPropertyName);
 
         // Make sure we record data if it's the first time we are called
         // or if we have no partial updates
@@ -151,17 +151,21 @@ void Buffer::syncFromFrontEnd(const QNode *frontEnd, bool firstTime)
             // if we enter this code block, there's no problem in actually
             // ignoring the partial updates
             if (v.isValid())
-                const_cast<QBuffer *>(node)->setProperty("QT3D_updateData", {});
+                const_cast<QBuffer *>(node)->setProperty(QBufferPrivate::UpdateDataPropertyName, {});
 
             if (dirty && !m_data.isEmpty())
                 forceDataUpload();
         } else if (v.isValid()) {
             // Apply partial updates and record them to allow partial upload to the GPU
-            Qt3DRender::QBufferUpdate updateData = v.value<Qt3DRender::QBufferUpdate>();
-            m_data.replace(updateData.offset, updateData.data.size(), updateData.data);
-            m_bufferUpdates.push_back(updateData);
-            m_bufferDirty = true;
-            const_cast<QBuffer *>(node)->setProperty("QT3D_updateData", {});
+            const QVariantList updateList = v.toList();
+            for (const QVariant &update : updateList) {
+                Qt3DRender::QBufferUpdate updateData = update.value<Qt3DRender::QBufferUpdate>();
+                m_data.replace(updateData.offset, updateData.data.size(), updateData.data);
+                m_bufferUpdates.push_back(updateData);
+                m_bufferDirty = true;
+            }
+
+            const_cast<QBuffer *>(node)->setProperty(QBufferPrivate::UpdateDataPropertyName, {});
         }
     }
     markDirty(AbstractRenderer::BuffersDirty);
