src/render/geometry/qbuffer_p.h
@@ -77,6 +77,8 @@ public:
     QBuffer::AccessType m_access;
 
     void setData(const QByteArray &data);
+
+    static const char *UpdateDataPropertyName;
 };
 
 struct QBufferData
