tests/auto/render/qbuffer/tst_qbuffer.cpp
@@ -181,6 +181,53 @@ private Q_SLOTS:
         QCOMPARE(arbiter.dirtyNodes.size(), 1);
         QCOMPARE(arbiter.dirtyNodes.front(), buffer.data());
     }
+
+    void checkAccumulatesBufferUpdates()
+    {
+        // GIVEN
+        TestArbiter arbiter;
+        QScopedPointer<Qt3DRender::QBuffer> buffer(new Qt3DRender::QBuffer);
+        arbiter.setArbiterOnNode(buffer.data());
+
+        QByteArray initData(6, '\0');
+        buffer->setData(initData);
+
+        // THEN
+        QCOMPARE(buffer->data(), initData);
+        QCOMPARE(buffer->property(Qt3DRender::QBufferPrivate::UpdateDataPropertyName), QVariant());
+
+        // WHEN
+        const QByteArray uData("012");
+        buffer->updateData(0, uData);
+
+        // THEN
+        {
+            const QVariant v = buffer->property(Qt3DRender::QBufferPrivate::UpdateDataPropertyName);
+            QVERIFY(v.isValid());
+            const QVariantList l = v.toList();
+            QCOMPARE(l.size(), 1);
+            const Qt3DRender::QBufferUpdate update = l.first().value<Qt3DRender::QBufferUpdate>();
+            QCOMPARE(update.offset, 0);
+            QCOMPARE(update.data, uData);
+            QCOMPARE(buffer->data().mid(0, 3), uData);
+        }
+
+        // WHEN
+        const QByteArray uData2("345");
+        buffer->updateData(3, uData2);
+
+        // THEN
+        {
+            const QVariant v = buffer->property(Qt3DRender::QBufferPrivate::UpdateDataPropertyName);
+            QVERIFY(v.isValid());
+            const QVariantList l = v.toList();
+            QCOMPARE(l.size(), 2);
+            const Qt3DRender::QBufferUpdate update = l.last().value<Qt3DRender::QBufferUpdate>();
+            QCOMPARE(update.offset, 3);
+            QCOMPARE(update.data, uData2);
+            QCOMPARE(buffer->data(), QByteArray("012345"));
+        }
+    }
 };
 
 QTEST_MAIN(tst_QBuffer)
